<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <action
        android:id="@+id/action_global_login"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/loginFragment"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.auth.LoginFragment"
        android:label="@string/auth_login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_scanner"
            app:destination="@id/scannerFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.auth.RegisterFragment"
        android:label="@string/auth_register_title"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/scannerFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.auth.ScannerFragment"
        android:label="@string/auth_scanner_title"
        tools:layout="@layout/fragment_scanner">
        <action
            android:id="@+id/action_scanner_to_profile"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_scanner_to_detail"
            app:destination="@id/scanDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/communityFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.community.CommunityFragment"
        android:label="@string/community_title"
        tools:layout="@layout/fragment_community">
        <action
            android:id="@+id/action_community_to_add_sighting"
            app:destination="@id/addSightingFragment" />
        <action
            android:id="@+id/action_community_to_map"
            app:destination="@id/mapSightingFragment" />
    </fragment>

    <fragment
        android:id="@+id/mapSightingFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.community.MapSightingFragment"
        android:label="@string/map_title"
        tools:layout="@layout/fragment_map_sighting">
        <argument
            android:name="latitude"
            app:argType="float" />
        <argument
            android:name="longitude"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/addSightingFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.community.AddSightingFragment"
        android:label="@string/add_sighting_title"
        tools:layout="@layout/fragment_add_sighting" />

    <fragment
        android:id="@+id/allergensFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.allergens.AllergensFragment"
        android:label="@string/allergens_title"
        tools:layout="@layout/fragment_allergens" />

    <fragment
        android:id="@+id/scanHistoryFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.history.ScanHistoryFragment"
        android:label="@string/history_title"
        tools:layout="@layout/fragment_scan_history">
        <action
            android:id="@+id/action_history_to_detail"
            app:destination="@id/scanDetailFragment" />
        <action
            android:id="@+id/action_scanHistory_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/scanDetailFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.history.ScanDetailFragment"
        android:label="@string/history_detail_title"
        tools:layout="@layout/fragment_scan_detail">
        <argument
            android:name="scanId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="unab.edu.co.abrahamcaceres.safebite.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/scannerFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
